# tencent-valuation

./: .gitignore  700 LOL deep-research-report.md  700_deep-research-report.md  CLAUDE.md  README.md  pyproject.toml
v3/: pyproject.toml
v3/config/: method_weights.yaml  peers.yaml  qa_gates.yaml  wacc.yaml
v3/data/model/: apv_outputs.csv  backtest_regime_breakdown.csv  capm_apt_compare.csv  peer_multiples.csv  relative_valuation_outputs.csv  residual_income_outputs.csv  reverse_dcf_outputs.csv  sensitivity_margin_growth.csv  tvalue_company_bridge.csv  tvalue_stat_diagnostics.csv  valuation_ensemble.csv  valuation_method_outputs.csv
v3/data/processed/: market_inputs.csv  segment_revenue.csv  tencent_financials.csv  tencent_quarterly_financials.csv
v3/data/raw/2024-03-31/: factors_source_manifest.json
v3/data/raw/2024-06-30/: factors_source_manifest.json
v3/data/raw/2024-09-30/: factors_source_manifest.json
v3/data/raw/2024-12-31/: factors_source_manifest.json
v3/data/raw/2025-03-31/: factors_source_manifest.json
v3/data/raw/2025-06-30/: factors_source_manifest.json
v3/data/raw/2025-09-30/: factors_source_manifest.json
v3/data/raw/2025-12-31/: factors_source_manifest.json
v3/data/raw/2026-02-19/: hkex_ccass.html  hkex_title_search.html  peer_fundamentals.csv  pipeline_manifest.json  sfc_short_positions.html  source_manifest.json  tencent_ir_financial_news.html  ust_daily_yield_2026.csv
v3/data/raw/2026-03-19/: factors_source_manifest.json  fetch_manifest.json  hkex_ccass.html  hkex_title_search.html  peer_fundamentals.csv  (+5 more)
v3/reports/: qa_2026-03-19.json  tencent_investment_memo_2026-02-19.md  tencent_valuation_2026-02-19.md  tencent_valuation_2026-03-19.md
v3/src/tencent_valuation_v3/: apv.py  backtest.py  cli.py  comps.py  ensemble.py  fetch.py  overrides.py  paths.py  pipeline.py  qa.py  report.py  residual_income.py  reverse_dcf.py  sotp.py  wacc.py
v3/tests/: test_factors.py  test_wacc_math.py
(+172 files in other folders)
